--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
-    <link href="/broadway/resources/css/style.css" 
+    <link href="/users/jamisonkester/desktop/broadway/resources/css/style.css"
     type="text/css" rel="stylesheet">
   </head>
   <body>
-
+    <div class="header">
+      <h1>Broadway Design</h1>
+      <nav>
+        <h2><a href="#home">Home</a></h2>
+        <h2><a href="#process">Process</a></h2>
+        <h2><a href="#work">Work</a></h2>
+        <h2><a href="#team">Team</a></h2>
+        <h2><a href="#contact">Contact</a></h2>
+      </nav>
+    </div>
+    <div link="process">
+      <h3>Our Process</h3>
+          <img src="/users/jamisonkester/desktop/broadway/resources/images/indentify.svg">
+            <h4>Identify</h4>
+              <h5>We focus on the most important details.</h5>
+          <img src="/users/jamisonkester/desktop/broadway/resources/images/understand.svg">
+            <h4>Understand</h4>
+              <h5>We study our projects inside and out.</h5>
+          <img src="/users/jamisonkester/desktop/broadway/resources/images/execute.svg">
+            <h4>Execute</h4>
+              <h5>We put everything we have into our work.</h5>
+      </div>
+    <div class="designed">Designed in Oakland</div>
+    <div>
+      <h4 link="work">Portfolio</h4>
+        <h5>Coming soon</h5>
+    </div>
+    <div>
+      <h4 link="team">Team</h4>
+        <h5>We're hiring!</h5>
+    </div>
+    <div>
+      <h4 link="contact">Contact</h4>
+        <h5>Phone: (555)555-5555</h5>
+        <h5>Email: test@test.com</h5>
+        <h5>Twitter: @test</h5>
+    </div>
   </body>
 </html>
