Finally completed this damn thing.

--- a/index.html
+++ b/index.html
@@ -17,32 +17,30 @@
         <h2><a href="#contact">Contact</a></h2>
       </nav>
     </div>
-    <div link="process">
-      <h3>Our Process</h3>
-          <img src="/users/jamisonkester/desktop/broadway/resources/images/indentify.svg">
-            <h4>Identify</h4>
-              <h5>We focus on the most important details.</h5>
+    <div id="process">Our Process</div>
+          <img src="/users/jamisonkester/desktop/broadway/resources/images/identify.svg">
+            <h3>Identify</h3>
+              <h4>We focus on the most important details.</h4>
           <img src="/users/jamisonkester/desktop/broadway/resources/images/understand.svg">
-            <h4>Understand</h4>
-              <h5>We study our projects inside and out.</h5>
+            <h3>Understand</h3>
+              <h4>We study our projects inside and out.</h4>
           <img src="/users/jamisonkester/desktop/broadway/resources/images/execute.svg">
-            <h4>Execute</h4>
-              <h5>We put everything we have into our work.</h5>
-      </div>
+            <h3>Execute</h3>
+              <h4>We put everything we have into our work.</h4>
+
     <div class="designed">Designed in Oakland</div>
-    <div>
-      <h4 link="work">Portfolio</h4>
-        <h5>Coming soon</h5>
+    <div id="work">Portfolio</div>
+        <h4>Coming soon</h4>
+    <div id="team">Team</div>
+        <h4>We're hiring!</h4>
+    <div id="contact">Contact</div>
+        <h4>Phone: (555)555-5555</h4>
+        <h4>Email: test@test.com</h4>
+        <h4>Twitter: @test</h4>
     </div>
-    <div>
-      <h4 link="team">Team</h4>
-        <h5>We're hiring!</h5>
-    </div>
-    <div>
-      <h4 link="contact">Contact</h4>
-        <h5>Phone: (555)555-5555</h5>
-        <h5>Email: test@test.com</h5>
-        <h5>Twitter: @test</h5>
-    </div>
+    <div class="footer">
+      <span>© Broadway <a href="#home">Home</a> <a href="#about">About</a>
+        <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></span>
+      </div>
   </body>
 </html>
